# bimanual_ocs2

./: .base_commit  .base_commit(ros1)  .gitignore  PICO_VR_开发记录.md  README.md  apply_patches.sh  ocs2_robotic_examples_WH00003_开发文档.md  update_patches.sh
docker/: FIX.MD  biomanual.md  dds_bridge_requirements.md  dockerfile  move_manipulation_WH00003_ocp.md  topic_inspect.py  wh00003_state_layout.md  wh00003_topics.md
lib/: PXREARobotSDK.h  PXREARobotSDK.lib
patches/: 0001-WH00003-dual-arm-target-waist-constraints-external-o.patch  0001-pico.patch  0001-wh00003.patch  0001-wh04aa.patch  0001-wh04aa_ros2.patch
wh00003_sldasm/: CMakeLists.txt  package.xml
wh00003_sldasm/config/: joint_names_wh00003_sldasm.yaml
wh044/: CMakeLists.txt  package.xml
wh044/rviz/: wh044.rviz
wh04aa_sldasm/: CMakeLists.txt  package.xml
wh04aa_sldasm/config/: joint_names_wh04aa_sldasm.yaml
wh04aa_sldasm/launch/: display.launch  gazebo.launch
wh04aa_sldasm/meshes/: base_link.STL  left_elbow_pitch_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_pitch_link.STL  left_wrist_roll_link.STL  left_wrist_yaw_link.STL  right_elbow_pitch_link.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_pitch_link.STL  right_wrist_roll_link.STL  right_wrist_yaw_link.STL  waist_pitch2_link.STL  waist_pitch3_link.STL  waist_pitch4_link.STL  waist_roll1_link.STL  waist_roll5_link.STL  waist_yaw_link.STL
wh04aa_sldasm/urdf/: wh04aa_sldasm copy.urdf  wh04aa_sldasm.csv  wh04aa_sldasm.urdf
(+36 files in other folders)
