<?xml version="1.0"?>
<package format="3">
  <name>wh04aa_sldasm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for wh04aa_sldasm</p>
    <p>This package contains configuration data, 3D models and launch files
for wh04aa_sldasm robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>